<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Jaza Box</string>
    <string name="get_started">GET STARTED</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="create_account">Not a member yet you can create a new account</string>
    <string name="username_hint">Username</string>
    <string name="address_hint">Address</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="terms_of_service">By signing up you agree to terms of service and privacy policy</string>
    <string name="title_activity_shop">Shop Home</string>
    <string name="phone_number">0786805713</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="maggi_jonhson"> </string>
    <string name="action_explore">Explore</string>
    <string name="best_sellers">Promotion</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="store_home">Store Home</string>
    <string name="action_accounts">Account</string>
    <string name="logout">Logout</string>
    <string name="Share">Share this app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search</string>
    <string name="featured_products">FEATURED PRODUCTS</string>
    <string name="oval_hat">Oval Hat</string>
    <string name="product_price">Ksh 24.00</string>
    <string name="title_activity_account">Account</string>
    <string name="men_s_hat">MEN\'S PERFUMES</string>
    <string name="papa_s_cap">Original Papa\'s Cap</string>
    <string name="details">Details</string>
    <string name="product_details"> </string>
    <string name="color">Color</string>
    <string name="price_money">Ksh </string>
    <string name="choose_a_color_for_the_item">Choose a color for the selected product</string>
    <string name="color_blue">Blue</string>
    <string name="color_brown">Brown</string>
    <string name="color_red">Red</string>
    <string name="color_green">Green</string>
    <string name="choose_size">Size</string>
    <string name="choose_product_size">Choose a size for the selected product</string>
    <string name="_14">14</string>
    <string name="_16">16</string>
    <string name="_18">18</string>
    <string name="_20">20</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="product_best_sellers">Best Sellers</string>
    <string name="product_favorite">Favorite</string>
    <string name="alert">Alert</string>
    <string name="inspire_hat">Inspire Hat</string>
    <string name="promotion_price">Ksh53.00 Ksh30.00</string>
    <string name="dark_baret_hat">Dark Baret Hat</string>
    <string name="account_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="deals">Deals</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="nygatan_20_lund_sweden">Nygatan 20 Lund, Sweden</string>
    <string name="previous_order_history">PREVIOUS ORDER HISTORY</string>
    <string name="help_us_get_the_word_out_to_friends_and_families">Help us get the word out to friends and families.</string>
    <string name="orders">Orders</string>
    <string name="delivered">Delivered</string>
    <string name="oval_summer_hat"> </string>
    <string name="ordered_on_04_08_2016">Ordered on: 04-08-2016</string>
    <string name="expires_08_20">Expires: 08/20</string>
    <string name="card_number">**** **** **** 8676</string>
    <string name="remove_card">REMOVE CARD</string>
    <string name="your_total_expenses_so_far">Your total expenses so far</string>
    <string name="_300_kr">300 Kr</string>
    <string name="panama_hat_for_summer">Panama Hat for Summer</string>
    <string name="last_until_22_january_2017">Last until 22 January, 2017</string>
    <string name="_230_kr">230 Kr</string>
    <string name="cashback">SAVE 70% CASHBACK</string>
    <string name="order_items">Items: </string>
    <string name="subtotal">Subtotal:</string>
    <string name="checkout">CHECKOUT</string>
    <string name="two">2</string>
    <string name="total">Total: </string>
    <string name="amount">Ksh49.50</string>
    <string name="total_amount">Amount</string>
    <string name="vat_amount">Ksh0.00</string>
    <string name="back_to_menu">BACK TO MENU</string>
    <string name="women_s_hat">WOMEN\'S PERFUMES</string>
    <string name="casual_hat">CASUAL PERFUMES</string>
    <string name="sort">Sort</string>
    <string name="filter_product">Filter</string>
    <string name="more">More</string>
    <string name="menu_search">Search</string>
    <string name="action_notification">Notification</string>
    <string name="app_settings">Settings</string>
    <string name="package_as_gift">Package as gift</string>
    <string name="remove_item">Remove</string>
    <string name="minus">-</string>
    <string name="plus_button">+</string>
    <string name="no_order_in_your_cart">No order in your cart</string>
    <string name="your_notification">YOUR NOTIFICATION</string>
    <string name="hot_sales_promotion_will_start_next_week">Hot sales promotion will start next week</string>
    <string name="notification_description">Enter in any of our shops with your coupon to redeem your promotion and gift</string>
    <string name="ten_days_ago">10 days ago</string>
    <string name="elegant_hats">Elegant Hats</string>
    <string name="_12_nygatan_lund_sweden">12 Nygatan Lund, Sweden</string>
    <string name="order_list">Order List</string>
    <string name="vat">VAT: </string>
    <string name="delievery_address">DELIEVERY ADDRESS</string>
    <string name="select_payment_method">SELECT PAYMENT METHOD</string>
    <string name="your_deleivery_address">YOUR DELEIVERY ADDRESS</string>
    <string name="selected_payment_method">SELECT PAYMENT METHOD</string>
    <string name="pay_with_paypal">PAY WITH PAYPAL</string>
    <string name="pay_with_credit_card">PAY WITH CREDIT CARD</string>
    <string name="pay_cash_on_deleivery">PAY CASH ON DELEIVERY</string>
    <string name="place_order_now">PLACE ORDER NOW</string>

    <string name="pref_header_notifications">Push Notifications</string>
    <string name="pref_title_new_message_notifications">Get the latest news on products and discounts</string>
    <string name="pref_header_general">Tab Menu Website</string>
    <string name="push_notifications">Push Notification Settings</string>
    <string name="all_categories">All Categories</string>
    <string name="store_info">Store Info</string>
    <string name="elegant_hat_store">Elegant Hat Store</string>
    <string name="store_phone">+46 78393920</string>
    <string name="store_email">elegant@yahoo.com</string>
    <string name="store_about"> ENTER YOUR STORE ABOUT</string>
    <string name="order_confirmation">ORDER CONFIRMATION</string>
    <string name="order_thank_you">Thank you for placing an order with us.</string>
    <string name="order_info"> ENTER ORDER DELIVERY DETAILS</string>
    <string name="return_to_shop">RETURN TO SHOP</string>
    <string name="no_internet">No internet connection</string>
    <string name="full_name_hint">Full name</string>
    <string name="names">Names</string>
    <string name="invalid_input_field">Input fields must be filled</string>
    <string name="total_expenses">TOTAL EXPENSES</string>
    <string name="used_payment_methods">PAYMENT METHODS</string>
    <string name="colourless">Colourless</string>
    <string name="_100ml">100ml</string>
    <string name="buy_policy"> ENTER YOUR BUYING POLICY </string>
    <string name="checkouts">Checkout</string>
    <string name="order_item_list">Order Item List</string>
    <string name="save_new_address">USE NEW ADDRESS</string>
    <string name="your_primary_address">YOUR PRIMARY ADDRESS</string>
    <string name="street">Street</string>
    <string name="zip_code">Zip code</string>
    <string name="country">Country</string>
    <string name="add_new_delivery_address">ADD NEW DELIVERY ADDRESS</string>
    <string name="new_addres">New Delivery Address</string>
    <string name="the_first_address_is_the_primary_address">Select one address for delivery</string>
    <string name="order_comfirmation">ORDER CONFIRMATION</string>
    <string name="order_message">Your order will be sent very soon. For any questions or further information about your order, please contact our customer support.</string>
    <string name="continue_shopping">CONTINUE SHOPPING</string>
    <string name="exotics">Tango</string>
    <string name="people_also_viewed">People Also Viewed</string>
    <string name="enter_your_card_details">Enter your Credit Card details</string>
    <string name="exotic_perfumes">Tango</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="lipa_na_mpesa">PAY WITH Lipa Na Mpesa</string>
    <string name="large_text">LARGE TEXT</string>
    <string name="mpesaCode">Enter Mpesa Code</string>
    <string name="mpesaNumber">Enter Phone Number</string>
    <string name="Complete_Payement">Complete Payement</string>


    <string name="mpesa1" tools:ignore="ExtraTranslation">On your Safaricom phone go the M-PESA menu</string>
    <string name="mpesa2" tools:ignore="DuplicateDefinition,ExtraTranslation">Select Lipa Na M-PESA and then select Buy Goods and Services</string>
    <string name="mpesa3" tools:ignore="DuplicateDefinition,ExtraTranslation"> Enter the Till Number 317093 </string>
    <string name="mpesa4" tools:ignore="DuplicateDefinition,ExtraTranslation"> Enter exactly the amount due</string>
    <string name="mpesa5" tools:ignore="DuplicateDefinition,ExtraTranslation">Follow subsequent prompts to complete the transaction</string>
    <string name="mpesa6" tools:ignore="DuplicateDefinition,ExtraTranslation">You will receive a confirmation SMS from M-PESA with a Confirmation Code.</string>
    <string name="mpesa7" tools:ignore="DuplicateDefinition,ExtraTranslation"> After you receive the confirmation code, please input your phone number and
        the confirmation code that you received from M-PESA below.</string>


</resources>
