<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/one"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/explore"
            android:title="@string/action_explore" />
    </group>

    <group
        android:id="@+id/two"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/category"
            android:title="@string/all_categories" />
    </group>

    <group
        android:id="@+id/three"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_best_seller"
            android:icon="@drawable/bestseller"
            android:title="@string/product_best_sellers" />
    </group>

    <group
        android:id="@+id/four"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_promotion"
            android:icon="@drawable/promotionicon"
            android:title="@string/best_sellers" />
    </group>

    <group
        android:id="@+id/six"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/notification"
            android:title="@string/action_notification" />
    </group>

    <group
        android:id="@+id/seven"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/personicon"
            android:title="@string/account_profile" />
    </group>

    <group
        android:id="@+id/eight"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/stores"
            android:title="@string/store_info" />
    </group>

    <group
        android:id="@+id/nine"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/sett"
            android:title="@string/app_settings" />
    </group>

    <group
        android:id="@+id/eleven"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_Share"
            android:icon="@drawable/sharing_asset"
            android:title="@string/Share" />
    </group>
    <group
        android:id="@+id/ten"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/signin"
            android:title="@string/logout" />
    </group>

</menu>
