<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_profile">
    </item>
    <item
        android:id="@+id/action_orders"
        android:title="@string/orders"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_order">
    </item>
    <item
        android:id="@+id/action_wallet"
        android:title="@string/wallet"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_wallet">
    </item>
    <item
        android:id="@+id/action_deals"
        android:title="@string/deals"
        app:showAsAction="ifRoom"
        android:enabled="true"
        android:icon="@drawable/ic_deal">
    </item>

</menu>