<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        card_view:cardElevation="@dimen/_4sdp"
        card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_12sdp"
        android:gravity="center"
        android:layout_weight="4">

        <ImageView
            android:id="@+id/order_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/capone"/>

        <TextView
            android:id="@+id/order_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_baret_hat"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/_12sdp"
            android:textStyle="bold"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/order_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_6sdp"
            android:text="@string/amount"
            android:textColor="@color/promotion_red"
            android:textSize="@dimen/_12sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:textSize="@dimen/_20sdp"
                    android:gravity="center"
                    android:background="@drawable/border"
                    android:textColor="@color/colorBlack"
                    android:text="@string/minus"/>

                <TextView
                    android:id="@+id/order_quantity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_6sdp"
                    android:text="@string/two"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:layout_weight="1"
                    android:textSize="@dimen/_12sdp" />


                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:textSize="@dimen/_15sdp"
                    android:gravity="center"
                    android:background="@drawable/border"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:text="@string/plus_button"/>

            </LinearLayout>


            <TextView
                android:id="@+id/remove_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_item"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_12sdp"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </LinearLayout>



    </android.support.v7.widget.CardView>

</LinearLayout>
