<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order_comfirmation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tonney.shop.ComfirmationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:text="@string/order_comfirmation"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_16sdp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/good" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/order_thank_you"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_24sdp"
                android:layout_marginRight="@dimen/_24sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/order_message"
                android:textColor="@color/colorLight"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/shopping_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_24sdp"
                android:background="@color/promotion_blue"
                android:padding="@dimen/_16sdp"
                android:text="@string/continue_shopping"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>